--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <h3 class="nav-title">G3 Architects</h3>
+
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact Us</li>
+                <li>Login</li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-contant">
+                <h1 class="banner-title">Brand New <br>
+                    Group of Architects
+                </h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration
+                    in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 
 </body>
 
