--- a/index.html
+++ b/index.html
@@ -35,7 +35,27 @@
         </div>
     </header>
     <main>
+        <!---feature section-->
+        <section class="teams-contain">
+            <div class="teams-img">
+                <img src="images/team1.png" alt="" srcset="">
+                <img src="images/team2.png" alt="" srcset="">
+                <img src="images/team3.png" alt="" srcset="">
+                <img src="images/team4.png" alt="" srcset="">
 
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="quick-list">Quick list</span> of Our <span
+                        class="feature">Features</span></h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+
+            </div>
+
+        </section>
     </main>
     <footer>
 
