--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
     <main>
-        <!---feature section-->
+        <!---teams section-->
         <section class="teams-contain">
             <div class="teams-img">
                 <img src="images/team1.png" alt="" srcset="">
@@ -55,6 +55,59 @@
 
             </div>
 
+        </section>
+        <!---feature section-->
+        <section>
+
+        </section>
+        <!---facts section-->
+        <section class="facts">
+            <h3 class="teams-title">Some Facts</h3>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration.</p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-state">544</h2>
+                    <p class="banner-description">Awards Winnings</p>
+
+                </div>
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-state">1450</h2>
+                    <p class="banner-description">Project Finished</p>
+
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-state">590</h2>
+                    <p class="banner-description">Clients Worked</p>
+
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-state">2230</h2>
+                    <p class="banner-description">Email Send</p>
+
+                </div>
+
+            </div>
+        </section>
+        <!--sponser section-->
+        <section>
+            <div class="banner-contant">
+                <h3 class="teams-title">Our Sponspors</h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="sponeser-img">
+                <img src="images/sponsors/amazon.png" alt="" srcset="">
+                <img src="images/sponsors/figma.png" alt="" srcset="">
+                <img src="images/sponsors/google.png" alt="" srcset="">
+                <img src="images/sponsors/spotify.png" alt="" srcset="">
+                <img src="images/sponsors/telerama.png" alt="" srcset="">
+            </div>
         </section>
     </main>
     <footer>
