--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </section>
     </main>
     <footer>
-
+        <p class="banner-description">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 
 </body>
