--- a/index.html
+++ b/index.html
@@ -57,7 +57,51 @@
 
         </section>
         <!---feature section-->
-        <section>
+        <section class="features">
+            <div class="feature-content">
+                <h3 class="teams-title">Features you will <br> love & enjoy</h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+
+                </div>
+                <div class="card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+
+                </div>
+                <div class="card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+
+                </div>
+                <div class="card">
+                    <h4>Super Easy to Edit</h4>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="images/architect.png" alt="" srcset="">
+                <div class="ten-years">
+                    <h1>10+year
+                    </h1>
+                    <p>Experience</p>
+
+                </div>
+
+            </div>
 
         </section>
         <!---facts section-->
